# openapi_specification.yaml
@@ -126,7 +126,7 @@ info:
   version: 1.0.0
 openapi: 3.0.2
 paths:
-  /models:
+  /api/models:
     get:
       responses:
         '200':
@@ -135,7 +135,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ModelCollection'
           description: List of model available
-  /models/<qualified_name>/metadata:
+  /api/models/{qualified_name}/metadata:
     get:
       parameters:
       - description: The qualified name of the model for which metadata is being requested.
@@ -157,7 +157,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
           description: Model not found.
-  /models/<qualified_name>/predict:
+  /api/models/{qualified_name}/predict:
     post:
       parameters:
       - description: The qualified name of the model being used for prediction.
